# bor_fbv

./: CMakeLists.txt  README.md  package.xml
launch/: random_sum_launch.py
src/: random_number_publisher.cpp  sum_subscriber.cpp
