<?xml version="1.0"?>
<package format="2">
  <name>bor_fbv</name>
  <version>0.0.1</version>
  <description>Random number generator and sum calculator</description>

  <maintainer email="boros.martin024@gmail.com">User</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
